--- a/_tools/schedule.yml
+++ b/_tools/schedule.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Delete source and add generated files
         run: |
           git rm schedule.json
-          git add --ignore-errors _data/program.yml _rooms _speakers _talks
+          git add --ignore-errors _data/schedule.yml _rooms _speakers _talks
 
       - name: Add new commit and push
         run: |
