--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://iqmrnavigator.org" # the base hostname & protocol for your site, e.g. https://example.com
 
 theme: jekyll-theme-conference
-
+remote_theme: "DigitaleGesellschaft/jekyll-theme-conference@v3.6.1"
 # Build settings
 markdown: kramdown
 sass:
