--- a/_config.yml
+++ b/_config.yml
@@ -68,7 +68,7 @@ conference:
     logo:
       name: IQMR
       img: 'iqmr-logo-small.png'  # inside /assets/images/
-      url: 'https://imqrnavigator.org'
+      url: 'https://iqmrnavigator.org'
     breakpoint: md
     links:
       - name: Schedule
@@ -92,19 +92,19 @@ conference:
           - name: Overview
             relative_url: /participants
           - name: Accomodations
-            relative_url: /participants/accomodations/
+            relative_url: /participants/accomodations
           - name: Choosing Modules
-            relative_url: /participants/choosing-modules/
+            relative_url: /participants/choosing-modules
         #  - name: Module Prerequisites
-         #   relative_url: /participants/module-prerequisites/
+         #   relative_url: /participants/module-prerequisites
           - name: Readings and Materials
-            relative_url: /participants/readings/
+            relative_url: /participants/readings
           - name: Research Design Instructions
-            relative_url: /participants/research-design-instrucions/
+            relative_url: /participants/research-design-instrucions
           - name: Research Design Sessions
-            relative_url: /participants/research-design-groups/
+            relative_url: /participants/research-design-groups
           - name: Syracuse University
-            relative_url: /participants/syracuse-university/
+            relative_url: /participants/syracuse-university
 #          - name: Code of Conduct
  #           relative_url: /participants/code-of-conduct/
   #        - name: FAQ
