--- a/_config.yml
+++ b/_config.yml
@@ -111,8 +111,23 @@ conference:
  #           relative_url: /participants/code-of-conduct/
   #        - name: FAQ
    #         relative_url: /participants/faq/
-    #  - name: Instructors
-     #   relative_url: /instructors/
+      - name: Instructors
+        relative_url: /instructors/
+        menu:
+          - name: Overview
+            relative_url: /instructors
+          - name: Designing and Teaching Your Modules
+            relative_url: /instructors/designin-teaching 
+          - name: Chairing Research Design Sessions
+            relative_url: /instructors/chairing-research-design
+          - name: Materials, Technology, and Services
+            relative_url: /instructors/materials-services
+          - name: Travel and Lodging
+            relative_url: /instructors/travel-lodging
+          - name: Honorarium Payment, Per Diem, and Travel Reimbursement
+            relative_url: /instructors/honoraria-logistics
+     
+
     #  - name: Advances in Qualitative Methods Workshop
       #    relative_url: /advances/
     #    menu:
@@ -140,18 +155,20 @@ conference:
         relative_url: /schedule/
       - name: Participant Information
         relative_url: /participants/
+      - name: Instructors
+        relative_url: /instructors/
+      - name: General Information
+        relative_url: /information/ 
     #  - name: Tickets
     #    disabled: true
     #    absolute_url: ''
 
   # Information boxes
-  #info_bars:
-  #  - title: Welcome to the Conference Theme for Jekyll!
-  #    color: primary
-  #    main_only: true
-  #    text: |
-  #      The Theme was originally made for the [Winterkongress](https://www.digitale-gesellschaft.ch/kongress/), a yearly conference of the [Digital Society Switzerland](https://digitale-gesellschaft.ch/).
-#
+  info_bars:
+    - title: Welcome to IQMR 2025 Authors Workshop
+      color: primary
+      text: |
+        The Authors Workshop is for invited authors only. IQMR Participants are encourage to spend the weekend enjoying the beautiful central New York region (and/or catching up on readings)
   #      ---
 #
   #      See the [README](github.com/DigitaleGesellschaft/jekyll-theme-conference/) on the project's GitHub repository for further information on how to configure and adapt it to your needs.
