Typos & more prominent menu

--- a/_config.yml
+++ b/_config.yml
@@ -163,7 +163,7 @@ conference:
     - title: Welcome to the IQMR 2025 Weekend Workshops
       color: primary
       text: |
-        "Advances in Qualitative Methods" and the "Emerging Methodologist Workshop" are for invited authors only. IQMR Participants are encouraged to spend the weekend getting to know each other better and enjoying the beautiful central New York region.
+        "Advances in Qualitative and Multi-Methods Research" and the "Emerging Methodologist Workshop" are for invited authors only. IQMR Participants are encouraged to spend the weekend getting to know each other better and enjoying the beautiful central New York region.
   #      ---
 #
   #      See the [README](github.com/DigitaleGesellschaft/jekyll-theme-conference/) on the project's GitHub repository for further information on how to configure and adapt it to your needs.
