--- a/_config.yml
+++ b/_config.yml
@@ -84,6 +84,8 @@ conference:
             relative_url: /information/dining-attractions 
           - name: Eggers and Maxwell Room Maps
             relative_url: /information/maxwell-eggers
+          - name: Faculty Biographies
+            relative_url: /information/faculty-biographies 
           - name: Research Design Schedule
             relative_url: /information/research-design-schedule
           - name: Zotero
